k8s/api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activitiesapp-api
  namespace: activitiesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activitiesapp-api
  template:
    metadata:
      labels:
        app: activitiesapp-api
    spec:
      containers:
        - name: api
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /api/version
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/version
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
