k8s/api-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activitiesapp-api
  namespace: sam-cael-final
  labels:
    app: activitiesapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activitiesapp-api
  template:
    metadata:
      labels:
        app: activitiesapp-api
    spec:
      containers:
      - name: activitiesapp-api
        image: samuelschuetz77/activitiesapp-api:h2c81
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 81
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
