k8s/tempo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: activitiesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.7.2
          args:
            - -config.file=/etc/tempo/config.yaml
          ports:
            - containerPort: 3200
              name: http
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
          readinessProbe:
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo/config.yaml
              subPath: config.yaml
            - name: tempo-data
              mountPath: /var/tempo
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
        - name: tempo-data
          emptyDir: {}
