k8s/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: activitiesapp-api
  namespace: sam-cael-final
spec:
  selector:
    app: activitiesapp-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: grpc
      protocol: TCP
      port: 81
      targetPort: 81
