k8s/loki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: activitiesapp
spec:
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
  type: ClusterIP
