k8s/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sam-cael-final
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
