k8s/tempo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: activitiesapp
spec:
  selector:
    app: tempo
  ports:
    - name: http
      port: 3200
      targetPort: 3200
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
  type: ClusterIP
