k8s/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activitiesapp-web
  namespace: sam-cael-final
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: activor.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: activitiesapp-web
            port:
              number: 80
